[Firebase][Crashlytics] Added a note on documentation * Updated sample * Added a conditional to Task to work only on Unix systems

--- a/Firebase.Crashlytics/source/Firebase.Crashlytics/Firebase.Crashlytics.targets
+++ b/Firebase.Crashlytics/source/Firebase.Crashlytics/Firebase.Crashlytics.targets
@@ -39,7 +39,7 @@
 
 	</Target>
     <Target Name="_FirebaseCrashlyticsScriptMasterTarget"
-            Condition="'$(_FirebaseCrashlyticsScriptMasterDependsOnTargets)'!='' AND '$(_SdkIsSimulator)'=='False'"
+            Condition="'$(_FirebaseCrashlyticsScriptMasterDependsOnTargets)'!='' AND '$(_SdkIsSimulator)'=='False' AND '$(OS)'=='Unix'"
             AfterTargets="$(_FirebaseCrashlyticsScriptMasterAfterTargets)"
             DependsOnTargets="$(_FirebaseCrashlyticsScriptMasterDependsOnTargets)" />
     <Target Name="_FirebaseCrashlyticsRunFabricScript" >
