--- a/Firebase.Crashlytics/nuget/Xamarin.Firebase.iOS.Crashlytics.nuspec
+++ b/Firebase.Crashlytics/nuget/Xamarin.Firebase.iOS.Crashlytics.nuspec
@@ -15,6 +15,9 @@
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
         <dependency id="Xamarin.Build.Download" version="0.4.6" />
+        <dependency id="Xamarin.Firebase.iOS.Analytics" version="4.0.5.0" />
+        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="2.0.8.0" />
+        <dependency id="Xamarin.Firebase.iOS.Core" version="4.0.13.0" />
       </group>
     </dependencies>
   </metadata>
