[XBD] Updated to version 0.4.11.0 * Updated F.Analytics sample to support iOS 8 and higher

--- a/Firebase.Analytics/source/Firebase.Analytics/Firebase.Analytics.csproj
+++ b/Firebase.Analytics/source/Firebase.Analytics/Firebase.Analytics.csproj
@@ -32,6 +32,21 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="Firebase.InstanceID">
+      <HintPath>..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\bin\Release\Firebase.InstanceID.dll</HintPath>
+    </Reference>
+    <Reference Include="Firebase.InstanceID">
+      <HintPath>..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\bin\Release\Firebase.InstanceID.dll</HintPath>
+    </Reference>
+    <Reference Include="Firebase.Core">
+      <HintPath>..\..\..\Firebase.Core\source\Firebase.Core\bin\Release\Firebase.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Firebase.InstanceID">
+      <HintPath>..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\bin\Release\Firebase.InstanceID.dll</HintPath>
+    </Reference>
+    <Reference Include="Firebase.InstanceID">
+      <HintPath>..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\bin\Release\Firebase.InstanceID.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
