--- a/Firebase.Analytics/source/Firebase.Analytics/Firebase.Analytics.targets
+++ b/Firebase.Analytics/source/Firebase.Analytics/Firebase.Analytics.targets
@@ -3,37 +3,28 @@
 
 	<PropertyGroup>
 		<_FirebaseAnalyticsAssemblyName>Firebase.Analytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseAnalyticsAssemblyName>
-		<_FirebaseAnalyticsItemsFolder>FAnlytcs-4.0.5</_FirebaseAnalyticsItemsFolder>
+		<_FirebaseAnalyticsItemsFolder>FAnlytcs-5.0.0</_FirebaseAnalyticsItemsFolder>
+		<_FirebaseAnalyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseAnalyticsItemsFolder)\Frameworks\</_FirebaseAnalyticsSDKBaseFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseAnalyticsItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/ef446566d2b6c158/FirebaseAnalytics-4.0.5.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/5bc051db4ae2c798/FirebaseAnalytics-5.0.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<XamarinBuildRestoreResources Include="_FirebaseAnalyticsItems"/>
+		<NativeReference Include="$(_FirebaseAnalyticsSDKBaseFolder)FirebaseAnalytics.framework">
+			<Kind>Framework</Kind>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC -lc++ -lsqlite3 -lz</LinkerFlags>
+			<Frameworks>AddressBook AdSupport CoreGraphics StoreKit SystemConfiguration</Frameworks>
+		</NativeReference>
+		<NativeReference Include="$(_FirebaseAnalyticsSDKBaseFolder)FirebaseCoreDiagnostics.framework">
+			<Kind>Framework</Kind>
+			<ForceLoad>True</ForceLoad>
+		</NativeReference>
+		<NativeReference Include="$(_FirebaseAnalyticsSDKBaseFolder)FirebaseNanoPB.framework">
+			<Kind>Framework</Kind>
+			<ForceLoad>True</ForceLoad>
+		</NativeReference>
 	</ItemGroup>
-
-	<Target Name="_FirebaseAnalyticsItems">
-
-		<PropertyGroup>
-			<_FirebaseAnalyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseAnalyticsItemsFolder)\Frameworks\</_FirebaseAnalyticsSDKBaseFolder>
-		</PropertyGroup>
-
-		<ItemGroup>
-			<RestoreAssemblyResource Include="$(_FirebaseAnalyticsSDKBaseFolder)FirebaseAnalytics.framework\FirebaseAnalytics">
-				<LogicalName>FirebaseAnalytics</LogicalName>
-				<AssemblyName>$(_FirebaseAnalyticsAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-            <RestoreAssemblyResource Include="$(_FirebaseAnalyticsSDKBaseFolder)FirebaseCoreDiagnostics.framework\FirebaseCoreDiagnostics">
-                <LogicalName>FirebaseCoreDiagnostics</LogicalName>
-                <AssemblyName>$(_FirebaseAnalyticsAssemblyName)</AssemblyName>
-            </RestoreAssemblyResource>
-            <RestoreAssemblyResource Include="$(_FirebaseAnalyticsSDKBaseFolder)FirebaseNanoPB.framework\FirebaseNanoPB">
-                <LogicalName>FirebaseNanoPB</LogicalName>
-                <AssemblyName>$(_FirebaseAnalyticsAssemblyName)</AssemblyName>
-            </RestoreAssemblyResource>
-		</ItemGroup>
-		
-	</Target>
 </Project>
