--- a/Firebase.Analytics/source/Firebase.Analytics/Firebase.Analytics.csproj
+++ b/Firebase.Analytics/source/Firebase.Analytics/Firebase.Analytics.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
