[Firebase][AdMob] Updated source to v7.30.0 * Updated Readme

--- a/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.csproj
+++ b/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
