--- a/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.targets
+++ b/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.targets
@@ -3,23 +3,19 @@
 	<PropertyGroup>
 		<_GoogleMobileAdsAssemblyName>Google.MobileAds, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleMobileAdsAssemblyName>
 		<_GoogleMobileAdsId>FAdM-7.30.0</_GoogleMobileAdsId>
+		<_GoogleMobileAdsFrameworkDir>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsId)\Frameworks\frameworks\</_GoogleMobileAdsFrameworkDir>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
-		<XamarinBuildRestoreResources Include="_GoogleMobileAdsItems" />
 		<XamarinBuildDownload Include="$(_GoogleMobileAdsId)">
 			<Url>https://dl.google.com/dl/cpdc/fc0cd3cd7f4a1f3b/Google-Mobile-Ads-SDK-7.30.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
+		<NativeReference Include="$(_GoogleMobileAdsFrameworkDir)GoogleMobileAds.framework\GoogleMobileAds">
+			<Kind>Framework</Kind>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC</LinkerFlags>
+			<Frameworks>AudioToolbox AVFoundation CFNetwork CoreGraphics CoreMedia CoreMotion CoreTelephony CoreVideo GLKit MediaPlayer MessageUI MobileCoreServices OpenGLES QuartzCore Security StoreKit SystemConfiguration</Frameworks>
+			<WeakFrameworks>AdSupport JavaScriptCore SafariServices WebKit</WeakFrameworks>
+		</NativeReference>
 	</ItemGroup>
-	<Target Name="_GoogleMobileAdsItems">
-		<PropertyGroup>
-			<_GoogleMobileAdsFrameworkDir>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsId)\Frameworks\frameworks\</_GoogleMobileAdsFrameworkDir>
-		</PropertyGroup>
-		<ItemGroup>
-			<RestoreAssemblyResource Include="$(_GoogleMobileAdsFrameworkDir)GoogleMobileAds.framework\GoogleMobileAds">
-				<LogicalName>GoogleMobileAds</LogicalName>
-				<AssemblyName>$(_GoogleMobileAdsAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-		</ItemGroup>
-	</Target>
 </Project>
