--- a/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.targets
+++ b/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.targets
@@ -10,7 +10,7 @@
 			<Url>https://dl.google.com/dl/cpdc/fc0cd3cd7f4a1f3b/Google-Mobile-Ads-SDK-7.30.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<NativeReference Include="$(_GoogleMobileAdsFrameworkDir)GoogleMobileAds.framework\GoogleMobileAds">
+		<NativeReference Include="$(_GoogleMobileAdsFrameworkDir)GoogleMobileAds.framework">
 			<Kind>Framework</Kind>
 			<ForceLoad>True</ForceLoad>
 			<LinkerFlags>-ObjC</LinkerFlags>
