--- a/Firebase.DynamicLinks/externals/Podfile
+++ b/Firebase.DynamicLinks/externals/Podfile
@@ -1,34 +1,36 @@
 =begin
 Last run FirebaseDynamicLinks installed:
-- FirebaseAnalytics (4.0.4)
-- FirebaseCore (4.0.8)
-- FirebaseDynamicLinks (2.1.0)
-- FirebaseInstanceID (2.0.4)
-- GoogleToolboxForMac (2.1.3)
+- FirebaseAnalytics (5.0.0)
+- FirebaseCore (5.0.0)
+- FirebaseDynamicLinks (3.0.0)
+- FirebaseInstanceID (3.0.0)
+- GoogleToolboxForMac (2.1.4)
+- nanopb (0.3.8)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
 In .targets file, located in Firebase.DynamicLinks binding, you can find:
-- FirebaseDynamicLinks (2.1.0)
+- FirebaseDynamicLinks (3.0.0)
 
 In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (4.0.4)
+- FirebaseAnalytics (5.0.0)
 
 In .targets file, located in Firebase.Core binding, you can find:
-- FirebaseCore (4.0.8)
-- GoogleToolboxForMac (2.1.3)
+- FirebaseCore (5.0.0)
+- GoogleToolboxForMac (2.1.4)
+- nanopb (0.3.8)
 
 In .targets file, located in Firebase.InstanceID binding, you can find:
-- FirebaseInstanceID (2.0.4)
+- FirebaseInstanceID (3.0.0)
 =end
 
 source 'https://github.com/CocoaPods/Specs.git'
 
-platform :ios, '7.0'
+platform :ios, '8.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'FirebaseDynamicLinks' do
-	pod 'Firebase/DynamicLinks', '4.8.0'
+	pod 'Firebase/DynamicLinks', '5.0.0'
 end
