--- a/Firebase.DynamicLinks/source/Firebase.DynamicLinks/Firebase.DynamicLinks.targets
+++ b/Firebase.DynamicLinks/source/Firebase.DynamicLinks/Firebase.DynamicLinks.targets
@@ -2,27 +2,20 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseDynamicLinksAssemblyName>Firebase.DynamicLinks, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseDynamicLinksAssemblyName>
-		<_FirebaseDynamicLinksItemsFolder>FDynmcL-2.3.1</_FirebaseDynamicLinksItemsFolder>
+		<_FirebaseDynamicLinksItemsFolder>FDynmcL-3.0.0</_FirebaseDynamicLinksItemsFolder>
+		<_FirebaseDynamicLinksSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseDynamicLinksItemsFolder)\Frameworks\</_FirebaseDynamicLinksSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseDynamicLinksItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/70f35873e12e3f32/FirebaseDynamicLinks-2.3.1.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/b360ba121cd93414/FirebaseDynamicLinks-3.0.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<XamarinBuildRestoreResources Include="_FirebaseDynamicLinksItems" />
+		<NativeReference Include="$(_FirebaseDynamicLinksSDKBaseFolder)FirebaseDynamicLinks.framework">
+			<Kind>Framework</Kind>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC</LinkerFlags>
+			<Frameworks>AssetsLibrary CoreMotion MessageUI QuartzCore</Frameworks>
+			<WeakFrameworks>WebKit</WeakFrameworks>
+		</NativeReference>
 	</ItemGroup>
-	<Target Name="_FirebaseDynamicLinksItems">
-
-		<PropertyGroup>
-			<_FirebaseDynamicLinksSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseDynamicLinksItemsFolder)\Frameworks\</_FirebaseDynamicLinksSDKBaseFolder>
-		</PropertyGroup>
-
-		<ItemGroup>
-			<RestoreAssemblyResource Include="$(_FirebaseDynamicLinksSDKBaseFolder)FirebaseDynamicLinks.framework\FirebaseDynamicLinks">
-				<LogicalName>FirebaseDynamicLinks</LogicalName>
-				<AssemblyName>$(_FirebaseDynamicLinksAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-		</ItemGroup>
-
-	</Target>
 </Project>
