--- a/Firebase.CloudMessaging/source/Firebase.CloudMessaging/Firebase.CloudMessaging.csproj
+++ b/Firebase.CloudMessaging/source/Firebase.CloudMessaging/Firebase.CloudMessaging.csproj
@@ -37,9 +37,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Loader.cs" />
-    <Compile Include="FirebaseCloudMessaging.linkwith.cs">
-      <DependentUpon>FirebaseMessaging</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
@@ -48,10 +45,6 @@
     <ObjcBindingCoreSource Include="Structs.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.csproj">
-      <Project>{87BB564C-85A8-4EC1-AD16-EC0A1ACCEE56}</Project>
-      <Name>Firebase.Analytics</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.csproj">
       <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
       <Name>Firebase.InstanceID</Name>
@@ -62,7 +55,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Firebase.CloudMessaging.targets" />
+    <NativeReference Include="..\..\externals\FirebaseMessaging.framework">
+      <Kind>Framework</Kind>
+      <Frameworks>SystemConfiguration</Frameworks>
+      <ForceLoad>True</ForceLoad>
+      <LinkerFlags>-lsqlite3</LinkerFlags>
+    </NativeReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
