--- a/Firebase.Core/externals/Podfile
+++ b/Firebase.Core/externals/Podfile
@@ -1,7 +1,14 @@
 =begin
 Check if main version or subversion number has changed. 
-If yes, please, update *.targets file located in binding 
-project, also, update Podfile file if needed.
+If yes, please, update Podfile file if needed.
+
+In Firebase.Core binding project, you can find the Native Reference of:
+* FirebaseCore (5.0.0)
+* GoogleToolboxForMac (2.1.4)
+* nanopb (0.3.8)
+* GTMSessionFetcher (1.1.12)
+* Protobuf (3.5.0)
+* leveldb-library (1.18.3)
 =end
 
 source 'https://github.com/CocoaPods/Specs.git'
@@ -19,6 +26,6 @@ target 'FirebaseCore' do
 	pod 'GoogleToolboxForMac/URLBuilder', '2.1.4'
 	pod 'nanopb', '0.3.8'
 	pod 'GTMSessionFetcher/Full', '1.1.12'
-	pod 'Protobuf', '3.4.0'
+	pod 'Protobuf', '3.5.0'
 	pod 'leveldb-library', '1.18.3'
 end
