--- a/Firebase.InstanceID/source/Firebase.InstanceID/Firebase.InstanceID.targets
+++ b/Firebase.InstanceID/source/Firebase.InstanceID/Firebase.InstanceID.targets
@@ -13,6 +13,7 @@
 		<NativeReference Include="$(_FirebaseInstanceIDSDKBaseFolder)FirebaseInstanceID.framework">
 			<Kind>Framework</Kind>
 			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC</LinkerFlags>
 		</NativeReference>
 	</ItemGroup>
 </Project>
