[Google][SignIn] Updated to version 4.1.2.0 * Added the new Model.AutoGeneratedName property * Updated component verision in Podfile, .targets, component.yaml, ReadMe and nuspec files * Removed Firebase.InstanceID and Firebase.Analytics dependencies * Added Native References to binding project and .targets file

--- a/Google.SignIn/externals/Makefile
+++ b/Google.SignIn/externals/Makefile
@@ -13,24 +13,25 @@ Pods:
 $(TARGETS):
 	$(MAKE) $@-iphoneos
 	$(MAKE) $@-iphonesimulator
-	lipo -create -output $@ $@-iphoneos $@-iphonesimulator
+	@ if [ "$@" == "leveldb-library" ]; then \
+		lipo -create -output leveldb.framework/leveldb leveldb.framework/leveldb leveldb-library-iphonesimulator.framework/leveldb; \
+		rm -rf leveldb-library-iphonesimulator.framework; \
+	else \
+		lipo -create -output $@.framework/$@ $@.framework/$@ $@-iphonesimulator.framework/$@; \
+		rm -rf $@-iphonesimulator.framework; \
+	fi
 
 %-iphoneos:
 	$(eval currentTarget=$(subst -iphoneos,,$@))
 	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphoneos -arch armv7 -arch arm64 -configuration Release clean build
-	-mv ./build/Release-iphoneos/$(currentTarget)/lib$(currentTarget).a $@
+	@ find ./build/Release-iphoneos/$(currentTarget) -type d -name "*.framework" | xargs -I % mv % ./
 
 %-iphonesimulator:
 	$(eval currentTarget=$(subst -iphonesimulator,,$@))
 	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphonesimulator -arch i386 -arch x86_64 -configuration Release clean build
-	-mv ./build/Release-iphonesimulator/$(currentTarget)/lib$(currentTarget).a $@
+	@ find ./build/Release-iphonesimulator/$(currentTarget) -type d -name "*.framework" | xargs -I % mv % $@.framework
 
 clean:
-	@ rm -rf Pods build
-	@ for target in $(TARGETS); do \
-	rm -f $$target*; \
-	done
+	@ rm -rf Pods build *.framework
 
 .PHONY: all clean
-
-
