[Firebase][AdMob] Added Google Mobile Ads Consent SDK * Added binding to ApiDefinition * Added documentation of it * Added it to Podfile and Makefile * You can modify the consentform.html file in XBD download cache and that file will be copied to Consent framework before signing Native Libraries

--- a/Firebase.AdMob/externals/Makefile
+++ b/Firebase.AdMob/externals/Makefile
@@ -1,13 +1,32 @@
 POD=pod
+XCODEBUILD=$(shell xcrun --sdk iphoneos --find xcodebuild)
 
-all: Pods
+PROJECT_ROOT=./Pods
+PROJECT=$(PROJECT_ROOT)/Pods.xcodeproj
+TARGETS=PersonalizedAdConsent
+
+all: Pods $(TARGETS)
 
 Pods:
 	$(POD) install
 
+$(TARGETS):
+	$(MAKE) $@-iphoneos
+	$(MAKE) $@-iphonesimulator
+	lipo -create -output $@.framework/$@ $@.framework/$@ $@-iphonesimulator.framework/$@
+	rm -rf $@-iphonesimulator.framework
+
+%-iphoneos:
+	$(eval currentTarget=$(subst -iphoneos,,$@))
+	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphoneos -arch armv7 -arch arm64 -configuration Release clean build
+	@ find ./build/Release-iphoneos/$(currentTarget) -type d -name "*.framework" | xargs -I % mv % ./
+
+%-iphonesimulator:
+	$(eval currentTarget=$(subst -iphonesimulator,,$@))
+	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphonesimulator -arch i386 -arch x86_64 -configuration Release clean build
+	@ find ./build/Release-iphonesimulator/$(currentTarget) -type d -name "*.framework" | xargs -I % mv % $@.framework
+
 clean:
-	rm -rf Pods
+	@ rm -rf Pods build *.framework
 
 .PHONY: all clean
-
-
