--- a/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.targets
+++ b/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.targets
@@ -3,19 +3,38 @@
 	<PropertyGroup>
 		<_GoogleMobileAdsAssemblyName>Google.MobileAds, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleMobileAdsAssemblyName>
 		<_GoogleMobileAdsId>FAdM-7.30.0</_GoogleMobileAdsId>
-		<_GoogleMobileAdsFrameworkDir>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsId)\Frameworks\frameworks\</_GoogleMobileAdsFrameworkDir>
+		<_GoogleMobileAdsConsentId>GCnsnt-1.0.1</_GoogleMobileAdsConsentId>
+		<_GoogleMobileAdsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsId)\Frameworks\frameworks\</_GoogleMobileAdsSDKBaseFolder>
+		<_GoogleMobileAdsConsentSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsConsentId)\googleads-consent-sdk-ios-1.0.1\PersonalizedAdConsent\PersonalizedAdConsent\</_GoogleMobileAdsConsentSDKBaseFolder>
+		<_GoogleMobileAdsCopyConsentFormMasterBeforeTargets>_CodesignNativeLibraries</_GoogleMobileAdsCopyConsentFormMasterBeforeTargets>
+		<_GoogleMobileAdsCopyConsentFormMasterDependsOnTargets>_GoogleMobileAdsCopyConsentForm</_GoogleMobileAdsCopyConsentFormMasterDependsOnTargets>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleMobileAdsId)">
 			<Url>https://dl.google.com/dl/cpdc/fc0cd3cd7f4a1f3b/Google-Mobile-Ads-SDK-7.30.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<NativeReference Include="$(_GoogleMobileAdsFrameworkDir)GoogleMobileAds.framework">
+		<XamarinBuildDownload Include="$(_GoogleMobileAdsConsentId)">
+			<Url>https://github.com/googleads/googleads-consent-sdk-ios/archive/v1.0.1.zip</Url>
+			<Kind>Zip</Kind>
+		</XamarinBuildDownload>
+		<NativeReference Include="$(_GoogleMobileAdsSDKBaseFolder)GoogleMobileAds.framework">
 			<Kind>Framework</Kind>
 			<ForceLoad>True</ForceLoad>
 			<LinkerFlags>-ObjC</LinkerFlags>
 			<Frameworks>AudioToolbox AVFoundation CFNetwork CoreGraphics CoreMedia CoreMotion CoreTelephony CoreVideo GLKit MediaPlayer MessageUI MobileCoreServices OpenGLES QuartzCore Security StoreKit SystemConfiguration</Frameworks>
 			<WeakFrameworks>AdSupport JavaScriptCore SafariServices WebKit</WeakFrameworks>
 		</NativeReference>
+		<GoogleMobileAdsCopyResources 
+				Include="$(_GoogleMobileAdsConsentSDKBaseFolder)PersonalizedAdConsent.bundle\consentform.html" />
 	</ItemGroup>
+
+	<Target Name="_GoogleMobileAdsCopyConsentFormMasterTargets"
+			Condition="'$(_GoogleMobileAdsCopyConsentFormMasterDependsOnTargets)'!=''"
+			BeforeTargets="$(_GoogleMobileAdsCopyConsentFormMasterBeforeTargets)"
+			DependsOnTargets="$(_GoogleMobileAdsCopyConsentFormMasterDependsOnTargets)" />
+	
+	<Target Name="_GoogleMobileAdsCopyConsentForm">
+		<Copy SourceFiles="@(GoogleMobileAdsCopyResources)" DestinationFolder="$(_AppBundlePath)Frameworks\PersonalizedAdConsent.framework\PersonalizedAdConsent.bundle" />  
+	</Target>
 </Project>
