--- a/Firebase.Auth/source/Firebase.Auth/Firebase.Auth.csproj
+++ b/Firebase.Auth/source/Firebase.Auth/Firebase.Auth.csproj
@@ -35,9 +35,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extension.cs" />
     <Compile Include="Loader.cs" />
-    <Compile Include="FirebaseAuth.linkwith.cs">
-    	<DependentUpon>FirebaseAuth</DependentUpon>
-	</Compile>
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
@@ -46,21 +43,18 @@
     <ObjcBindingCoreSource Include="Structs.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.csproj">
-      <Project>{87BB564C-85A8-4EC1-AD16-EC0A1ACCEE56}</Project>
-      <Name>Firebase.Analytics</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.csproj">
-      <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
-      <Name>Firebase.InstanceID</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.csproj">
       <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
       <Name>Firebase.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Firebase.Auth.targets" />
+    <NativeReference Include="..\..\externals\FirebaseAuth.framework">
+      <Kind>Framework</Kind>
+      <Frameworks>Security</Frameworks>
+      <LinkerFlags>-ObjC -lc++ -lsqlite3 -lz</LinkerFlags>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
