--- a/Google.MobileAds/component/component.yaml
+++ b/Google.MobileAds/component/component.yaml
@@ -29,5 +29,6 @@ samples:
   - //xNS:Import[contains (@Project, 'Google.MobileAds.targets')]
 local-nuget-repo: ../../tmp-nugets
 no_build: true
+additional-files:
 - source: ../External-Dependency-Info
   destination: THIRD-PARTY-NOTICES
