[Firebase][Invites] Updated to version 3.0.0.0 * Updated the component version in component.yaml, nuspec, targets and Readme files * Updated ApiDefinition, Podfile and Makefile * Updated documentation * Added the component Native Reference to targets files

--- a/Google.SignIn/externals/Podfile
+++ b/Google.SignIn/externals/Podfile
@@ -11,6 +11,8 @@ projects, also, update Podfile files if needed.
 
 In Google.SignIn binding project, you can find the .targets file of:
 * GoogleSignIn (4.1.2)
+
+and the Native Reference of:
 * GTMOAuth2 (1.1.6)
 
 In Firebase.Core binding project, you can find the Native Reference of:
