--- a/Firebase.Invites/source/Firebase.Invites/Firebase.Invites.csproj
+++ b/Firebase.Invites/source/Firebase.Invites/Firebase.Invites.csproj
@@ -36,9 +36,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Loader.cs" />
-    <Compile Include="FirebaseInvites.linkwith.cs">
-      <DependentUpon>FirebaseInvites</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
@@ -75,9 +72,10 @@
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
-    <ObjcBindingNativeLibrary Include="..\..\externals\GoogleAPIClientForREST">
-      <Link>GoogleAPIClientForREST</Link>
-    </ObjcBindingNativeLibrary>
+    <NativeReference Include="..\..\externals\GoogleAPIClientForREST.framework">
+      <Kind>Framework</Kind>
+      <SmartLink>False</SmartLink>
+    </NativeReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
